72ddbea1-52ba-5bc1-8382-22b66a4c2f9b

--- a/ansible/templates/index.html.j2
+++ b/ansible/templates/index.html.j2
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My HTML file</title>
+    <title>{{ html_page_title }}</title>
   </head>
   <body>
-    <h1>Hello, World!</h1>
-    <h2>Build: 72ddbea1-52ba-5bc1-8382-22b66a4c2f9b</h2>
+    <h1>{{ body_page_title }}</h1>
+    <h2>Build: {{ current_time_uuid }}</h2>
     <h2>Rules of building on github pages :</h2>
     <li></li>
   </body>
