--- a/ansible/templates/index.html.j2
+++ b/ansible/templates/index.html.j2
@@ -7,6 +7,11 @@
     <h1>{{ body_page_title }}</h1>
     <h2>Build: {{ current_time_uuid }}</h2>
     <h2>Rules of building on github pages :</h2>
-    <li></li>
+    <ol>
+      <li>Create an entirely public repository on github.com.</li>
+      <li>No server side component so pages must be regenerated each time.</li>
+      <li>Private files may be uploaded but they will need to be encrypted (e.g. using Ansible Vault)</li>
+      <li>No mysql or other database, so data will need to be stored in sqlite or equivalent, or json file to be queried client side.</li>
+    </ol>
   </body>
 </html>
