--- a/ansible/templates/index.html.j2
+++ b/ansible/templates/index.html.j2
@@ -11,6 +11,7 @@
       <li>Create an entirely public repository on github.com.</li>
       <li>No server side component so pages must be regenerated each time.</li>
       <li>Private files may be uploaded but they will need to be encrypted (e.g. using Ansible Vault)</li>
+      <li>This means API keys etc will need to be stored in Ansible Vault before being consumed by Ansible, they cannot be made public due to abuse potential.</li>
       <li>No mysql or other database, so data will need to be stored in sqlite or equivalent, or json file to be queried client side.</li>
     </ol>
   </body>
