4152db32-eacb-52db-8a56-eb93577f223f

--- a/ansible/templates/index.html.j2
+++ b/ansible/templates/index.html.j2
@@ -30,18 +30,17 @@
       </ol>
     </div>
     <div>
-      <h2>
-        Rules of creating a Banter space
-      </h2>
+      <h2>Banter<h2>
       <p>
         <a href="https://bantervr.com/">Banter</a> is a Unity-based Social VR platform that users can create worlds built with Unity Assets and <a href="https://aframe.io/">A-Frame</a>.
       </p>
-      <p>
-        To build a space and host it on your github page, the assets of the scene need to be added to the repository and A-Frame needs to be added to the HTML page.
-      </p>
-      <p>
-        The page when loaded into Banter will load as a space.
-      </p>
+      <h2>
+        Rules of creating a Banter space :
+      </h2>
+      <ol>
+        <li>Assets of the scene need to be added to the repository and A-Frame needs to be added to the HTML page.</li>
+        <li>The page when loaded into Banter will load as a space.</li>
+      </ol>
     </div>
     <div>
       <h2>
