9106ec16-16bf-5979-b81c-9218f9c305ee

--- a/ansible/templates/index.html.j2
+++ b/ansible/templates/index.html.j2
@@ -46,6 +46,9 @@
       <h2>
         Sample scene "CityGPT" 
       </h2>
+      <p>
+        The scene below is a demo A-Frame scene generated using ChatGPT an embedded into the page. Feel free to "View Source" on this page to see how it was built.
+      </p>
     </div>
     <div id="sceneContainer">
       <a-scene physics="debug: true" embedded>
