--- a/ansible/templates/index.html.j2
+++ b/ansible/templates/index.html.j2
@@ -19,7 +19,7 @@
     <h2>Build: {{ current_time_uuid }}</h2>
     </div>
     <div>
-      <h2>Rules of building on github pages :</h2>
+      <h2>Rules of building on <a href="https://pages.github.com/">github pages</a> :</h2>
       <ol>
         <li>Create an entirely public repository on github.com.</li>
         <li>No server side component so pages must be regenerated each time.</li>
