--- a/ansible/templates/index.html.j2
+++ b/ansible/templates/index.html.j2
@@ -30,7 +30,7 @@
       </ol>
     </div>
     <div>
-      <h2>Banter<h2>
+      <h2>Banter</h2>
       <p>
         <a href="https://bantervr.com/">Banter</a> is a Unity-based Social VR platform that users can create worlds built with Unity Assets and <a href="https://aframe.io/">A-Frame</a>.
       </p>
