--- a/ansible/templates/index.html.j2
+++ b/ansible/templates/index.html.j2
@@ -21,7 +21,7 @@
     <div>
       <h2>Rules of building on <a href="https://pages.github.com/">github pages</a> :</h2>
       <ol>
-        <li>Create an entirely public repository on github.com.</li>
+        <li>Create an entirely public repository on github.com named YOURACCOUNTNAME.github.io .</li>
         <li>No server side component so pages must be regenerated each time.</li>
         <li>Private files may be uploaded but they will need to be encrypted (e.g. using Ansible Vault)</li>
         <li>This means API keys etc will need to be stored in Ansible Vault before being consumed by Ansible, they cannot be made public due to abuse potential.</li>
