--- a/ansible/templates/index.html.j2
+++ b/ansible/templates/index.html.j2
@@ -43,6 +43,18 @@
       </ol>
     </div>
     <div>
+      <h2>Linking to a Banter cinematic experience</h2>
+      <p>
+        There are (at least) 2 different setups for viewing a stream in Banter within their prebuilt cinema :
+      </p>
+      <ol>
+        <li>Vising a space such as the Cinema2D <a href="https://cinema2d.glitch.me">space</a>. The youtube link is hardcoded within the scene, but you can create your own version of the page on <a href="https://glitch.com/">glitch.com</a> by remixing it on the project <a href="https://glitch.com/edit/#!/cinema2d">page</a></li>
+        <li>
+          Creating and visiting a link to a parameterised version of that page such as <a href="https://cinema2dparameterised.glitch.me/?livestream-type=twitch&livestream-url=https://www.twitch.tv/shoseki/">My Twitch Stream</a>. As of documentation, valid parameters for livestream-type are (twitch or youtube) and URLs must be fully qualified YouTube or Twitch URLs.
+        </li>
+      </ol>
+    </div>
+    <div>
       <h2>
         Sample scene "CityGPT" 
       </h2>
