--- a/ansible/templates/index.html.j2
+++ b/ansible/templates/index.html.j2
@@ -84,7 +84,7 @@
               // Check if the "seed" parameter is present
               if (!currentParams.has('seed')) {
                 // Add the "seed" parameter with a default value of 0
-                currentParams.set('seed', '0');
+                currentParams.set('seed', 5);
 
                 // Update the URL with the additional "seed" parameter
                 currentUrl.search = currentParams.toString();
