--- a/ansible/templates/index.html.j2
+++ b/ansible/templates/index.html.j2
@@ -40,6 +40,7 @@
       <ol>
         <li>Assets of the scene need to be added to the repository and A-Frame needs to be added to the HTML page.</li>
         <li>The page when loaded into Banter will load as a space.</li>
+        <li>To help debug, set up your Quest to connect to your PC with a USB cable, click "allow" in the popup and when in Banter, browse to a space. Open up chrome on your PC, type chrome://inspect and look for the connected device under Remote Devices. Click on the one representing Banter and it will open the Chrome developer tools.</li>
       </ol>
     </div>
     <div>
