2240516c-ccc9-59e3-bdc0-89366de2933a

--- a/ansible/templates/single_page.html.j2
+++ b/ansible/templates/single_page.html.j2
@@ -12,7 +12,7 @@
         <a href="{{ site.site_url }}">{{ site.header }}</a>
       </span>
       <span class="p-2 text-white inline-block float-right ">
-        Site Build: {{ current_time_uuid }}
+        site build: {{ current_time_uuid }}
       </span>
       <span class="p-2 text-white inline-block float-right ">
         {% for item in site.social_media_links %}
