--- a/docs/css/output.css
+++ b/docs/css/output.css
@@ -2529,6 +2529,10 @@ html {
   border-bottom-color: hsl(var(--bc) / 20%);
 }
 
+.static {
+  position: static;
+}
+
 .col-span-4 {
   grid-column: span 4 / span 4;
 }
