--- a/ansible/templates/single_page.html.j2
+++ b/ansible/templates/single_page.html.j2
@@ -21,7 +21,7 @@
       </span>
     </div>
     <div class="p-2 rounded-lg">
-      <div class="p-2">{{ site.navigate_row}}</div>
+      <div class="p-2">{{ page_menu_links }}</div>
     </div>
     <div class="grid p-2 gap-2">
       {% for item in site.info %}
